--- a/containers/ambari-server/Dockerfile
+++ b/containers/ambari-server/Dockerfile
@@ -6,4 +6,5 @@ RUN yum install -y ambari-server postgresql-jdbc
 RUN ambari-server setup --database=postgres --databasehost=postgres.dev --databaseport=5432 --databasename=ambari --postgresschema=ambari  --databaseusername=ambari --databasepassword=dev --silent
 RUN ambari-server setup --jdbc-db postgres --jdbc-driver=/usr/share/java/postgresql-jdbc.jar
 ADD scripts/start.sh /start.sh
+ADD scripts/HDP-2.6.4.0-91.xml /tmp
 CMD /start.sh
