--- a/containers/ambari-server/Dockerfile
+++ b/containers/ambari-server/Dockerfile
@@ -6,6 +6,8 @@ RUN yum install -y ambari-server postgresql-jdbc
 RUN ambari-server setup --database=postgres --databasehost=postgres.lbg.dev --databaseport=5432 --databasename=ambari --postgresschema=ambari  --databaseusername=ambari --databasepassword=dev --silent
 RUN ambari-server setup --jdbc-db postgres --jdbc-driver=/usr/share/java/postgresql-jdbc.jar
 RUN yum install -y krb5-server krb5-libs krb5-workstation
+RUN yum install -y ambari-agent
+RUN yum install -y ambari-metrics-*
 ADD scripts/start.sh /start.sh
 ADD scripts/HDP-2.6.4.0-91.xml /tmp
 CMD /start.sh
