--- a/containers/kafkazoo/Dockerfile
+++ b/containers/kafkazoo/Dockerfile
@@ -1,4 +1,14 @@
 FROM hdp-base 
+
+ARG HTTP_PROXY=''
+ENV HTTP_PROXY $HTTP_PROXY
+
+ARG HTTPS_PROXY=''
+ENV HTTPS_PROXY $HTTPS_PROXY
+
+ARG NO_PROXY=''
+ENV NO_PROXY $NO_PROXY
+
 RUN yum install -y ambari-agent
 RUN yum install -y ambari-metrics-*
 RUN yum install -y ambari-logsearch-*
