--- a/containers/kdc/Dockerfile
+++ b/containers/kdc/Dockerfile
@@ -1,4 +1,14 @@
 FROM alpine
+
+ARG HTTP_PROXY=''
+ENV HTTP_PROXY $HTTP_PROXY
+
+ARG HTTPS_PROXY=''
+ENV HTTPS_PROXY $HTTPS_PROXY
+
+ARG NO_PROXY=''
+ENV NO_PROXY $NO_PROXY
+
 RUN apk add --no-cache krb5-server krb5 supervisor
 ADD supervisord.conf /etc/supervisord.conf
 ADD docker-entrypoint.sh /
