--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -1,4 +1,14 @@
 FROM postgres:9.4
+
+ARG HTTP_PROXY=''
+ENV HTTP_PROXY $HTTP_PROXY
+
+ARG HTTPS_PROXY=''
+ENV HTTPS_PROXY $HTTPS_PROXY
+
+ARG NO_PROXY=''
+ENV NO_PROXY $NO_PROXY
+
 RUN apt-get update -y
 RUN apt-get install -y wget
 ARG AMBARI_DDL_URL
