correct syntax to pass build args

--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -1,13 +1,13 @@
 FROM postgres:9.4
 
 ARG HTTP_PROXY=''
-ENV HTTP_PROXY $HTTP_PROXY
+ENV HTTP_PROXY=$HTTP_PROXY
 
 ARG HTTPS_PROXY=''
-ENV HTTPS_PROXY $HTTPS_PROXY
+ENV HTTPS_PROXY=$HTTPS_PROXY
 
 ARG NO_PROXY=''
-ENV NO_PROXY $NO_PROXY
+ENV NO_PROXY=$NO_PROXY
 
 RUN apt-get update -y
 RUN apt-get install -y wget
