add lower case env vars too.

--- a/containers/node/Dockerfile
+++ b/containers/node/Dockerfile
@@ -7,9 +7,11 @@ ENV HDP_REPO_URL $HDP_REPO_URL
 
 ARG HTTP_PROXY=''
 ENV HTTP_PROXY=$HTTP_PROXY
+ENV http_proxy=$HTTP_PROXY
 
 ARG HTTPS_PROXY=''
 ENV HTTPS_PROXY=$HTTPS_PROXY
+ENV https_proxy=$HTTPS_PROXY
 
 ARG NO_PROXY=''
 ENV NO_PROXY=$NO_PROXY
