--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -2,9 +2,11 @@ FROM postgres:9.4
 
 ARG HTTP_PROXY=''
 ENV HTTP_PROXY=$HTTP_PROXY
+ENV http_proxy=$HTTP_PROXY
 
 ARG HTTPS_PROXY=''
 ENV HTTPS_PROXY=$HTTPS_PROXY
+ENV https_proxy=$HTTPS_PROXY
 
 ARG NO_PROXY=''
 ENV NO_PROXY=$NO_PROXY
