--- a/containers/kdc/Dockerfile
+++ b/containers/kdc/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-RUN apk add --no-cache krb5-server krb5 supervisor
+RUN apk add --no-cache krb5-server krb5 supervisor bash
 ADD supervisord.conf /etc/supervisord.conf
 ADD docker-entrypoint.sh /
 VOLUME /var/lib/krb5kdc
