--- a/examples/compose/ranger.yml
+++ b/examples/compose/ranger.yml
@@ -13,7 +13,7 @@ services:
      dev:
       ipv4_address: 172.18.1.3
   ambari-server.lbg.dev:
-    build: 
+    build:
       context: ../../containers/node
       args:
        - AMBARI_REPO_URL=${AMBARI_REPO_URL}
@@ -21,8 +21,13 @@ services:
     hostname: ambari-server
     domainname: lbg.dev
     ports:
+    #Ambari server
      - "8080:8080"
+    #Ranger
      - "6080:6080"
+     - "6182:6182"
+     - "6083:6083"
+     - "6183:6183"
     command: /serverstart.sh
     dns: 172.18.1.2
     networks:
@@ -71,11 +76,6 @@ services:
      - "11443:11443"
      # Knox
      - "8443:8443"
-     # Ranger
-     - "6080:6080"
-     - "6182:6182"
-     - "6083:6083"
-     - "6183:6183"
      # Grafana
      - "3000:3000"
      # Zeppelin
@@ -221,7 +221,7 @@ services:
       ipv4_address: 172.18.1.8
 
   ipa.lbg.dev:
-    image: ipa 
+    image: ipa
     hostname: ipa.lbg.dev
     ports:
      - "53:53"
@@ -241,8 +241,8 @@ services:
      - "9445:9445"
     volumes:
      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-     - ipatmp:/tmp
-     - iparun:/run
+     - ipa-tmp:/tmp
+     - ipa-run:/run
      - /data:/data
     networks:
      dev:
@@ -255,17 +255,18 @@ networks:
     ipam:
      config:
       - subnet: 172.18.1.0/24
-      - subnet: 2001:3984:3989::/64 
+      - subnet: 2001:3984:3989::/64
 volumes:
     master0-data:
     dn0-data:
     dn1-data:
     dn2-data:
-    ipatmp:
+    ipa-data:
+    ipa-tmp:
      driver_opts:
       type: tmpfs
       device: tmpfs
-    iparun:
+    ipa-run:
      driver_opts:
       type: tmpfs
       device: tmpfs
