move all apt-get cmds into one layer

--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -1,6 +1,5 @@
 FROM postgres:9.4
-RUN apt-get update -y
-RUN apt-get install -y wget
+RUN apt-get update -y && apt-get install -y wget
 ARG AMBARI_DDL_URL
 ADD pg_hba.conf /pg_hba.conf
 ADD scripts/* /docker-entrypoint-initdb.d/
