--- a/examples/compose/ranger.yml
+++ b/examples/compose/ranger.yml
@@ -1,11 +1,7 @@
 version: '2.2'
 services:
   postgres.lbg.dev:
-    build:
-     context: ../../containers/postgres
-     args:
-      - AMBARI_DDL_URL=${AMBARI_DDL_URL}
-    image: hdp/postgres
+    image: registry:443/postgres
     hostname: postgres
     domainname: lbg.dev
     dns: 172.18.1.2
@@ -13,11 +9,7 @@ services:
      dev:
       ipv4_address: 172.18.1.3
   ambari-server.lbg.dev:
-    build:
-      context: ../../containers/node
-      args:
-       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-    image: hdp/ambari-server
+    image: registry:443/node
     hostname: ambari-server
     domainname: lbg.dev
     ports:
@@ -34,12 +26,7 @@ services:
      dev:
       ipv4_address: 172.18.1.4
   master0.lbg.dev:
-    build:
-      context: ../../containers/node
-      args:
-       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-       - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/master
+    image: registry:443/node
     privileged: true
     hostname: master0
     domainname: lbg.dev
@@ -93,12 +80,7 @@ services:
       ipv4_address: 172.18.1.5
 
   dn0.lbg.dev:
-    build:
-      context: ../../containers/node
-      args:
-       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-       - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/worker
+    image: registry:443/node
     privileged: true
     hostname: dn0
     domainname: lbg.dev
@@ -137,12 +119,7 @@ services:
       ipv4_address: 172.18.1.6
 
   dn1.lbg.dev:
-    build:
-      context: ../../containers/node
-      args:
-       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-       - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/worker
+    image: registry:443/node
     privileged: true
     hostname: dn1
     domainname: lbg.dev
@@ -179,12 +156,7 @@ services:
       ipv4_address: 172.18.1.7
 
   dn2.lbg.dev:
-    build:
-      context: ../../containers/node
-      args:
-       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-       - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/worker
+    image: registry:443/node
     privileged: true
     hostname: dn2
     domainname: lbg.dev
@@ -221,7 +193,7 @@ services:
       ipv4_address: 172.18.1.8
 
   ipa.lbg.dev:
-    image: ipa
+    image: registry:443/ipa
     hostname: ipa.lbg.dev
     ports:
      - "53:53"
