tidied up sparkTest.sh

--- a/jars/spark/application.conf
+++ b/jars/spark/application.conf
@@ -2,7 +2,7 @@ etlfactory {   
   kafka {     
     brokerlist: "dn0.lbg.dev:6667,dn1.lbg.dev:6667,dn2.lbg.dev:6667"
     consumergroup: "CDC_TEST"
-    auto.offset.reset: "latest"
+    auto.offset.reset: "earliest"
     security: "PLAINTEXT"
     schema.registry.url: "http://172.18.1.9:9090"
     kafkaTopicPattern: "CDC_TEST"
